# myunixc_proj

./: README.md  git_push.sh
androidc/ncnn-examples/helloworld/: CMakeLists.txt  hello.cpp
androidc/ncnn-examples/ncnn/include/ncnn/: platform.h
androidc/ncnn-examples/ncnn/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake
androidc/ncnn-examples/ncnn/lib/pkgconfig/: ncnn.pc
androidc/ncnn-examples/retinaface/: CMakeLists.txt  bak-CMakeLists.txt  retinaface.cpp
